[FIX] field_html: make jw-follow-range visible in dialog

--- a/addons/web_editor/static/src/scss/wysiwyg.scss
+++ b/addons/web_editor/static/src/scss/wysiwyg.scss
@@ -552,3 +552,7 @@ jw-toolbar {
     -moz-box-shadow: 2px 2px 5px 1px rgba(0,0,0,0.25);
     box-shadow: 2px 2px 5px 1px rgba(0,0,0,0.25);
 }
+
+jw-follow-range {
+    z-index: 1050;
+}
